versioned_docs/version-0.5.2/scribe/Manage Project/Projects/p3-7-sync.md
---
id: p3-7-sync
sidebar_label: Sync Collabration
title: Sync Collabration
---
**It enables multiple user to Collabrate remotely**

### Login to the DOOR43 server ###

 
**Steps**

- Click on the **SYNC** button On the left side of the screen
- Click **Register Now**. 
- Fill in all the fields on the DOOR43 registration page, then click **Register Account**
- The user recieves a link in the mail Id given
- Click on the link and confirm the password again to activate the user account
- Now, login with the username and password on the **Sribe Sync page**
<video controls src="/0.5.3/Logintotheserver.mov" width="100%" type="video/mov"/>

### Cloud Sync ###

**Steps**

- Enter a valid username and password to access your DOOR 43 account 
- Select the project you wish to work on, from the **SYNC** pane
- After selecting the desired project click the **SAVE TO CLOUD** button on the SYNC pane 
- A progress bar will appear, showing the status and completion of the **sync** process
- Once the project is successfully synced, it will be listed at the bottom of the **CLOUD PROJECTS** pane

<video controls src="/0.5.3/cloudsync.mov" width="100%" type="video/mp4"/>



### Offline Sync ###

**Steps**

- Enter a valid username and password to access your DOOR 43 account
- In the CLOUD PROJECTS pane, enter the project owner's username in the specified field
- Choose the project you wish to download to your local system
- The selected project will be filtered, and the CLOUD PROJECTS pane will show the **SAVE TO COMPUTER** button
- By clicking the **SAVE TO COMPUTER** button, you can download the project to your local system
- The downloaded project will appear in the **SYNC** pane 
- To edit the downloaded project, navigate to the PROJECTS page and choose the downloaded project 

<video controls src="/0.5.3/offlinesync.mov" width="100%" type="video/mp4"/>



### Contribute to a shared project ###

**Steps**

**Project owner**

- The project owner has to login to DOOR43, https://git.door43.org/
- Select the Project to **collaborate**
- Click on the **collaborator** tab
- Add the names of the collaborators
- Select **Add Collaborator**
- Give access to the collaborator either as **Administrator, Write, or Read**

**Collaborator**

- Go to the **Sync** page
- Login to the DOOR43 account
- The user/collaborator can then enter the project owner's name in the given field on the Sync page of Scribe
- Select the project to work
- Click on **SAVE TO COMPUTER** button on the top right side of the screen 
- The project will be synced to Scribe
- A notification stating 'project sync to scribe successful' will appear in the bottom left side
- The project has now been set up for work 

<video controls src="/0.5.3/collabsync.mov" width="100%" type="video/mp4"/>



### How to sync a project ###

**Steps**

- Click on the **Sync** button on the left side of the window
- A list of all user projects will appear on the left of the sync window
- If you are a new user, register into your DOOR43 account, or else log in to DOOR43
- The right side of the screen will display all projects saved on the DOOR43 remote server
- Select a project that you want to sync to the door43 remote server
- Click on the **SAVE TO CLOUD** button on the top left side of the screen
- On the top of the screen, the user can see the uploading progress bar
- The project will then be uploaded to the DOOR43 remote server and displayed to the user in the right-hand column of the screen
<video controls src="/0.5.3/syncaproject.mov" width="100%" type="video/mp4"/>

### Sync a project from the project module ###

A project can be directly synced by the user from the project module.

**Steps**

- Click on the project module and open a project
- Click the **Sync** button
- The uploading progress bar will be displayed at the top
- (Login to the DOOR43 server if you are not done yet)
<video controls src="/0.5.3/projectsync.mov" width="100%" type="video/mp4"/>

### Sync back a project from the DOOR43 remote server ###

The user can **Sync** a project from the server to the local system. Ensure that the project file is not in the local system otherwise the project file will get mergerd into the local system.

**Steps**   

- Click on the **Sync** button
- Login to the DOOR43 account on the right side of the column
- It lists every project on the DOOR43 server
- Make sure that the project file is not in the local system, otherwise the project file will get merged into the local system
- Click on the project that you want to sync back from the remote server to the local system
- Click on the **SAVE TO COMPUTER** button on the top right side of the screen
- The user can see the uploading progress bar
- With this, a project will be synced back from the server

<video controls src="/0.5.3/syncback.mov" width="100%" type="video/mov"/>

### Merge a project from the DOOR43 remote server ###


**Steps**

- Click on the **Sync** button,login to the DOOR43 account
- It displays all the projects in the door 43 server at the right side of the column
- Select a project that you want to sync to the door43 remote server
- Click on the **SAVE TO CLOUD** button on the top left side of the screen
- The progress bar will appear
- (You can undo the merging process by clicking the undo button before counting down to an end)
- This will merge a project from the server
<video controls src="/assets/merge.mov" width="100%" type="video/mov"/>